<resources>
    <string name="app_name">TourGuide</string>
    <string name="restaurant_name">Name</string>
    <string name="restaurant_rating">Rating</string>
    <string name="restaurant_details">about restaurant</string>
    <string name="toolbar">Tour Dubai</string>
    <string name="al_maeda">Al-Maeda</string>
    <string name="rating">"Rating"</string>
    <string name="about_us">" About us"</string>
    <string name="facilities">"Facilities"</string>
    <string name="photo_credit">https://www.planetware.com/tourist­attractions­/dubai­uae­dub­dubai.htm</string>
    <string name="rating_1">#1</string>
    <string name="rating_2">#2</string>
    <string name="rating_3">#3</string>
    <string name="rating_4">#4</string>
    <string name="rating_5">#5</string>
    <string name="rating_6">#6</string>
    <string name="rating_7">#7</string>
    <string name="rating_8">#8</string>
    <string name="rating_9">#9</string>
    <string name="rating_10">#10</string>
    <string name="rating_11">#11</string>
    <string name="rating_12">#12</string>
    <string name="rating_13">#13</string>
    <string name="rating_14">#14</string>
    <string name="rating_15">#15</string>
    <string name="rating_16">#16</string>
    <string name="rating_17">#17</string>
    <string name="rating_18">#18</string>
    <string name="rating_19">#19</string>
    <string name="rating_20">#20</string>
    <string name="rating_21">#21</string>
    <string name="rating_22">#22</string>
    <string name="rating_23">#23</string>
    <string name="rating_24">#24</string>
    <string name="rating_25">#25</string>
    <string name="rating_26">#26</string>
    <string name="rating_27">#27</string>
    <string name="rating_28">#28</string>
    <string name="rating_29">#29</string>
    <string name="rating_30">#30</string>
    <string name="rating_31">#31</string>
    <string name="rating_32">#32</string>
    <string name="rating_33">#33</string>
    <string name="rating_34">#34</string>
    <string name="rating_35">#35</string>
    <string name="rating_36">#36</string>
    <string name="rating_37">#37</string>
    <string name="rating_38">#38</string>
    <string name="the_palm_dubai">The Palm Dubai</string>
    <string name="the_palm_dubai_details">A perfect hotel,
        in a perfect location!\nPerfections AAA+++.</string>
    <string name="the_palm_dubai_facilities">Palm Jumeirah-Hotels
        with pools-Hotels with parking</string>
    <string name="raffles_dubai">Raffles Dubai</string>
    <string name="raffles_dubai_details"> The world\’s best hotel with the best team
          of people working there.
    \nClean, comfortable,polite staff.\nIt was an unbelievably extraordinary pampering experience</string>
    <string name="raffles_dubai_facilities"> Bur Dubai\nHotels with pools\nHotels with parking</string>
    <string name="grosvenor_house_hotel_and_apartments">Grosvenor House Hotel and Apartments</string>
    <string name="grosvenor_house_hotel_and_apartments_details"> Absolutely unreal experience from start to finish.\nWow-Fantastic Staff.</string>
    <string name="grosvenor_house_hotel_and_apartments_facilities"> Dubai Marina\nHotels with pools\nHotels with parking</string>
    <string name="bulgari_resort"> Bulgari Resort, Dubai</string>
    <string name="bulgari_resort_details">Couple retreat, couple paradise\nAmazing piece of land</string>
    <string name="bulgari_resort_facilities">Jumeirah\nHotels with pools\nFive­star hotels</string>
    <string name="jumeirah_emirates_towers"> Jumeirah
        Emirates Towers</string>
    <string name="jumeirah_emirates_towers_details">Amazing staff , amazing facilities ...\nDubai great city\nEverything was first class.</string>
    <string name="jumeirah_emirates_towers_facilities">Hotel with pools\nFive­star hotels\nHotels with parking</string>
    <string name="park_hyatt_dubai">Park Hyatt Dubai</string>
    <string name="park_hyatt_dubai_details">The best hotel in the UAE.\nGreat location.\nEverything is excellent</string>
    <string name="park_hyatt_dubai_facilities">Hotel with pools\nFive­star hotels\nHotels with parking</string>
    <string name="four_seasons_resort_dubai"> Four Seasons Resort Dubai at Jumeirah Beach</string>
    <string name="four_seasons_resort_dubai_details">Great hotel (as is expected from this brand) on
        Jumeirah beach surrounded by great restaurants\nFour seasons exceptional”</string>
    <string name="four_seasons_resort_dubai_facilities">Hotels with pools\nFivestar hotels</string>
    <string name="jumeirah_al_qasr"> Jumeirah Al Qasr ­ Madinat Jumeirah</string>
    <string name="jumeirah_al_qasr_details">Good maintenance and clean just stunning hotel\nGreat location, great food,
        friendly staff, awesome facility. Check it out. Highly recommended.\nFantastic hotel in an amazing location with nearly all that...</string>
    <string name="jumeirah_al_qasr_facilities">Hotels with pools\nHotels with parking</string>
    <string name="renaissance_downtown_hotel">Renaissance Downtown Hotel, Dubai</string>
    <string name="renaissance_downtown_hotel_details">Great Stay\nFriendly and welcoming staff, near by convenient store that...\nGreat place but bit too dark/modern</string>
    <string name="renaissance_downtown_hotel_facilities">Hotel with pools\nFive­star hotels\nHotels with parking</string>
    <string name="jumeirah_dar_al_masyaf">Jumeirah Dar Al Masyaf ­ Madinat Jumeirah</string>
    <string name="jumeirah_dar_al_masyaf_details">Can\'t wait to book again!\nluxury\nA very relaxing weekend</string>
    <string name="jumeirah_dar_al_masyaf_facilities"> Five­star hotels\nHotels with parking</string>
    <string name="burj_al_arab_jumeirah">Burj Al Arab Jumeirah</string>
    <string name="burj_al_arab_jumeirah_details"> A dream.\nMost amazing room and service I have ever experienced\nLovely people, lovely location and nice rooms.</string>
    <string name="burj_al_arab_jumeirah_facilities">Hotel with pools\nFive­star hotels\nHotels with parking</string>
    <string name="al_bandar_rotana">Al Bandar Rotana – Dubai Creek</string>
    <string name="al_bandar_rotana_details">Wonderful stay for the weekend\nThe breakfast was amazing, I especially loved the bread...\nRecommend to all my co­workers</string>
    <string name="al_bandar_rotana_facilities">Hotel with pools\nFive­star hotels\nHotels with parking</string>
    <string name="address_dubai_marina">Address Dubai Marina</string>
    <string name="address_dubai_marina_details">Everything was amazing, staff went above and beyond.\nPure luxury\nGood</string>
    <string name="address_dubai_marina_facilities">Hotels with pools\nHotels with parking</string>
    <string name="zabeel_house_mini">Zabeel House MINI Al Seef by Jumeirah</string>
    <string name="zabeel_house_mini_details">Ligh\nLittle Gem in Old Dubai\nAwesome</string>
    <string name="zabeel_house_mini_facilities">Hotels with pools\nHotels with parking</string>
    <string name="jumeirah_mina_asalam">Jumeirah Mina A\'Salam ­ Madinat Jumeirah</string>
    <string name="jumeirah_mina_asalam_details">I will go back to jbh as soon as its open\n\nBreakfast ­ although fantastic ­ very expensive.\nWonderful exprience.</string>
    <string name="jumeirah_mina_asalam_facilities">Hotels with pools\nHotels with parking</string>
    <string name="armani_hotel_dubai">Armani Hotel Dubai</string>
    <string name="armani_hotel_dubai_details">Extremely luxury and perfect place, definitely recommended,...\nTruly memorable stay\nNew and modern stable.</string>
    <string name="armani_hotel_dubai_facilities">Hotels with pools\nHotels with parking</string>
    <string name="rove_dubai_marina">Rove Dubai Marina</string>
    <string name="rove_dubai_marina_details">Awesome!\nvery relaxing.....just the room space\nKeep up the good work.</string>
    <string name="rove_dubai_marina_facilities">Hotels with pools\nHotels with parking</string>
    <string name="waldorf_astoria_dubai_palm_jumeirah">Waldorf Astoria Dubai Palm Jumeirah</string>
    <string name="waldorf_astoria_dubai_palm_jumeirah_details">Quiet and relaxing!\nMy Favorite hotel in Dubai\nEVERYTHING!</string>
    <string name="waldorf_astoria_dubai_palm_jumeirah_facilities">Hotels with pools\nFive Star Hotel </string>
    <string name="rove_city_centre">Rove City Centre</string>
    <string name="rove_city_centre_details">Good Location\nGreat Dubai location\nVery nice atmosphere.</string>
    <string name="rove_city_centre_facilities">Hotels with pools\nHotels with parking</string>
    <string name="rove_healthcare_city">Rove Healthcare City</string>
    <string name="rove_healthcare_city_details">Room was clean and attractive\nmy first experience with the rove hotel group, if
    you want...\nMy wife and I will definitely be back coz we\'re are already Roved!!!!!!!</string>
    <string name="rove_healthcare_city_facilities">Hotels with pools\nHotels with parking</string>
    <string name="the_oberoi_dubai">The Oberoi Dubai</string>
    <string name="the_oberoi_dubai_details">The restaurant food was great.\nExcellent experience\nWe liked alot about The Oberoi as the hospitality of the...</string>
    <string name="the_oberoi_dubai_facilities">Hotels with pools\nHotels with parking\nFive Star Hotel</string>
    <string name="taj_dubai">Taj Dubai</string>
    <string name="taj_dubai_details">Staff was excellent.\nTaj perfection\nThe staff were absolutely fantastic, and went the extra mile...</string>
    <string name="taj_dubai_facilities">Hotels with pools\nFive Star Hotel\nHotels with parking</string>
    <string name="aloft_city_centre_deira">Aloft City Centre Deira, Dubai</string>
    <string name="aloft_city_centre_deira_details">Overall except for the first night issues we had had a very pleasant stay.\nGood
    for Biz Trip or Travel. Not a busy crowded locality. Near to Airport. Nice view of Dubai Creek\nBreakfast was too crowded</string>
    <string name="aloft_city_centre_deira_facilities">Hotels with pools\nFour Star Hotel\nHotels with parking</string>
    <string name="rove_downtown"> Rove Downtown</string>
    <string name="rove_downtown_details">purely budget hotel\nAmazing.\nstay of 4 nights was pleasant, supermarket on ground floor was very good, breakfast food unpleasnt</string>
    <string name="rove_downtown_facilities">Hotels with pools\nHotels with parking</string>
    <string name="rove_trade_centre">Rove Trade Centre</string>
    <string name="rove_trade_centre_details">Friendly Staff.\nReally great stay\nThe rooms and it\'s cleanliness</string>
    <string name="rove_trade_centre_facilities">Hotels with pools\nHotels with parking</string>
    <string name="palazzo_versace_dubai">Palazzo Versace Dubai</string>
    <string name="palazzo_versace_dubai_details">So beautiful and nice hotel design, so comforable , good...\nLuxury at its finest. Amazzinggggggg...period!!!\nSuspicious stay</string>
    <string name="palazzo_versace_dubai_facilities">Hotels with pools\nFive Star \nHotels with parking</string>
    <string name="residence_spa_dubai">Residence \&amp; Spa, Dubai</string>
    <string name="residence_spa_dubai_details">we will definitely stay there again\nService in this hotel could be 7 ******* as wel.\nHighly recommended for a peaceful high quality Dubai stay.</string>
    <string name="residence_spa_dubai_facilities">Hotels with pools\nHotels with parking</string>
    <string name="park_regis_boutique_hotel">Park Regis Boutique Hotel</string>
    <string name="park_regis_boutique_hotel_details">The staff made my stay really comfortable!\nCute little place in busy Jumeira\nPerfect stay, would highly recommend</string>
    <string name="park_regis_boutique_hotel_facilities"> </string>
    <string name="roda_links_al_nasr">Roda Links Al Nasr</string>
</resources>