<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/eight_dp">

    <ImageView
        android:id="@+id/restaurant_image"
        android:layout_width="@dimen/image_size_large"
        android:layout_height="@dimen/image_size_large"
        android:background="@color/colorMargin"
        android:padding="2dp"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:paddingLeft="@dimen/eight_dp">

        <TextView
            android:id="@+id/restaurant_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textSize="@dimen/text_name"
            style="@style/HeadingTextAppearance"
            tools:text="@string/restaurant_name" />

        <TextView
            android:id="@+id/restaurant_ratings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_rating"
            style="@style/BodyTextAppearance"
            tools:text="@string/restaurant_rating" />

        <TextView
            android:id="@+id/restaurant_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_detail"
            style="@style/BodyTextAppearance"
            tools:text="@string/restaurant_details" />
        <TextView
            android:id="@+id/restaurant_dish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_detail"
            style="@style/BodyTextAppearance"
            tools:text="@string/restaurant_details" />
    </LinearLayout>

</LinearLayout>